--- a/CocoaPods-Sample/Podfile
+++ b/CocoaPods-Sample/Podfile
@@ -9,5 +9,5 @@ target 'StorytellerSampleApp' do
   use_frameworks!
 
   # Pods for StorytellerSampleApp
-  pod 'Storyteller'
+  pod 'StorytellerSDK'
 end
