--- a/CocoaPods-Sample/Podfile
+++ b/CocoaPods-Sample/Podfile
@@ -9,5 +9,5 @@ target 'StorytellerSampleApp' do
   use_frameworks!
 
   # Pods for StorytellerSampleApp
-  pod 'StorytellerSDK'
+  pod 'StorytellerSDK',  '~> 1.1.3'
 end
