--- a/Carthage-Sample/StorytellerSampleApp/Info.plist
+++ b/Carthage-Sample/StorytellerSampleApp/Info.plist
@@ -41,7 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>Photo Library Access</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Access</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 </dict>
 </plist>
