--- a/CocoaPods-Sample/Podfile
+++ b/CocoaPods-Sample/Podfile
@@ -2,13 +2,13 @@ source 'https://github.com/getstoryteller/storyteller-sdk-ios-podspec.git'
 source 'https://cdn.cocoapods.org/'
 
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '15.0'
 
 target 'StorytellerSampleApp' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for StorytellerSampleApp
-  pod 'StorytellerSDK',  '~> 8.4.3'
+  pod 'StorytellerSDK',  '~> 9.0'
   pod 'Google-Mobile-Ads-SDK'
 end
