Trigger pipeline manually from any branch
Also storing the bundle ID in the Fastfile.

--- a/.gitignore
+++ b/.gitignore
@@ -55,10 +55,11 @@ cocoapods/Pods/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/test_output
+*/fastlane/README.md
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots/**/*.png
+*/fastlane/test_output
 
 # AppCode
 .idea/workspace.xml
